Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56255

Malformed expression crashes JS optimizer

    XMLWordPrintable

Details

    Description

      Run qtqtuickcompiler on the attached file:

      ./qtquickcompiler -s /tmp/000000.qml /dev/null
      

      It will crash:

      1 (anonymous namespace)::optimizeSSA     qv4ssa.cpp          4030 0x59e49c 
      2 QV4::IR::Optimizer::run                qv4ssa.cpp          5410 0x5e34a6 
      3 QmlC::InstructionSelection::run        isel.cpp            190  0x40fafb 
      4 QV4::EvalInstructionSelection::compile qv4isel_p.cpp       82   0x4e2350 
      5 compileQmlFile                         qtquickcompiler.cpp 119  0x43a8f8 
      6 main                                   main.cpp            462  0x40c04c 
      

      qtquickcompiler might not be able to generate valid C++ from this file, but it should never crash.

      Attachments

        1. 000000.qml
          0.3 kB
        2. backtrace.txt
          16 kB

        Issue Links

          For Gerrit Dashboard: QTBUG-56255
          # Subject Branch Project Status CR V

          Activity

            People

              shausman Simon Hausmann
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes