src/qml/compiler/qv4ssa.cpp
@@ -1968,14 +1968,9 @@ public:
         return *this;
     }
 
-    bool isEmpty() const
-    {
-        return worklistSize == 0;
-    }
-
     Stmt *takeNext(Stmt *last)
     {
-        if (isEmpty())
+        if (worklistSize == 0)
             return 0;
 
         const int startAt = last ? last->id() + 1 : 0;
@@ -1991,6 +1986,10 @@ public:
         --worklistSize;
         Stmt *s = stmts.at(pos);
         Q_ASSERT(s);
+
+        if (removed.at(s->id()))
+            return takeNext(s);
+
         return s;
     }
 
@@ -3960,9 +3959,7 @@ void optimizeSSA(StatementWorklist &W, DefUses &defUses, DominatorTree &df)
     ExprReplacer replaceUses(defUses, function);
 
     Stmt *s = 0;
-    while (!W.isEmpty()) {
-        s = W.takeNext(s);
-        Q_ASSERT(s);
+    while ((s = W.takeNext(s))) {
 
         if (Phi *phi = s->asPhi()) {
             // dead code elimination:
